# PokerbotClient

./: .gitignore  CMakeLists.txt  README  compile.sh  runclient.sh  runclient_EN.sh  translate.sh
conf/: README  Rule Creator.conf
help/: CMakeLists.txt  blocks.html  blocksWeb.html  createDoc.bat  doc.qch  doc.qhc  doc.qhcp  doc.qhp  features.html  featuresWeb.html  functions.html  functionsWeb.html  index.html  index2.html  indexWeb.html  nav.js  poker.html  pokerWeb.html  ruleCreator.html  (+7 more)
src/app/ruleCreator/: CMakeLists.txt  cardEvaluator.cpp  cardEvaluator.hpp  cardEvaluator.ui  cardEvaluatorCreator.cpp  cardEvaluatorCreator.hpp  config.json  connectiontarget.cpp  connectiontarget.hpp  documentcontroller.cpp  documentcontroller.hpp  helpWindow.cpp  helpWindow.hpp  helpWindow.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  mygraphicsview.cpp  mygraphicsview.hpp  rulelistwidget.cpp  rulelistwidget.hpp  rulewidget.cpp  rulewidget.hpp  rulewidget.ui  settingsdialog.cpp  settingsdialog.hpp  settingsdialog.ui  settingsmanager.cpp  settingsmanager.hpp  tab.cpp  tab.hpp  ui_mainwindow.h  ui_predefinedrulesdescriptor.h  ui_rulewidget.h  ui_settingsdialog.h  visualiseWindow.cpp  visualiseWindow.hpp  visualiseWindow.ui  welcomeWindow.cpp  (+2 more)
src/app/ruleCreator/JSON/: JSONCreator.cpp  JSONCreator.hpp  helloCreator.cpp  helloCreator.hpp
src/app/ruleCreator/config/: reader.cpp  reader.hpp
src/app/ruleCreator/model/: elementmodel.cpp  elementmodel.hpp  predefinedelementmodel.cpp  predefinedelementmodel.hpp
src/app/ruleCreator/network/: JSONPlayerAdder.cpp  JSONPlayerAdder.hpp  JSONTableCreator.cpp  JSONTableCreator.hpp  WW10_protocol.pb.cc  WW10_protocol.pb.h  codeSender.cpp  codeSender.hpp  goodbyeSender.cpp  goodbyeSender.hpp  helloSender.cpp  helloSender.hpp  prologsocket.cpp  prologsocket.hpp
src/app/ruleCreator/resources/: resources.qrc
src/app/ruleCreator/serialization/qt/: ruleserialization.cpp  ruleserialization.hpp
src/app/ruleCreator/view/: elementview.cpp  elementview.hpp  garbagecanlabel.cpp  garbagecanlabel.hpp  predefinedelementview.cpp  predefinedelementview.hpp  predefinedrulesdescriptor.cpp  predefinedrulesdescriptor.hpp  predefinedrulesdescriptor.ui
src/lib/3thParty/: CMakeLists.txt  Makefile
src/lib/3thParty/protobuf-cmake/: CMakeLists.txt  Makefile
src/lib/3thParty/protobuf-cmake/libprotobuf/: CMakeLists.txt  Makefile
src/lib/pokerRuleSystem/: CMakeLists.txt  booleanfunction.cpp  booleanfunction.hpp  numericalfunction.cpp  numericalfunction.hpp  pokeraction.cpp  pokeraction.hpp  pokerrulesystem.cpp  pokerrulesystem.hpp  raiseaction.cpp  raiseaction.hpp  simpledb.cpp  simpledb.hpp  templatefunction.hpp  types.cpp  types.hpp  ui_cardeditwidget.h  ui_editcardlistdialog.h  ui_editconstantdialog.h
src/lib/pokerRuleSystem/card/: CMakeLists.txt  card.cpp  card.hpp  carddrawer.cpp  carddrawer.hpp  cardexpressionvalidator.cpp  cardexpressionvalidator.hpp  rankparser.cpp  rankparser.hpp  simpleparser.hpp  suitparser.cpp  suitparser.hpp
src/lib/pokerRuleSystem/dictionary/: featureDictionary.hpp
src/lib/pokerRuleSystem/graphicsView/: CMakeLists.txt  constantitembooldelegate.cpp  constantitembooldelegate.hpp  constantitemcarddelegate.cpp  constantitemcarddelegate.hpp  constantitemnumericaldelegate.cpp  constantitemnumericaldelegate.hpp  pokeractiondelegate.cpp  pokeractiondelegate.hpp  raiseactiongraphicsitem.cpp  raiseactiongraphicsitem.hpp
src/lib/pokerRuleSystem/prolog/: CMakeLists.txt  prologwriter.cpp  prologwriter.hpp
src/lib/pokerRuleSystem/resources/: pokerRes.qrc
src/lib/pokerRuleSystem/serialization/qt/: CMakeLists.txt  elementserializer.cpp  elementserializer.hpp
src/lib/pokerRuleSystem/view/: CMakeLists.txt  cardEvaluator.cpp  cardEvaluator.hpp  cardEvaluator.ui  cardEvaluatorCreator.cpp  cardEvaluatorCreator.hpp  cardeditwidget.cpp  cardeditwidget.hpp  cardeditwidget.ui  editbooldialog.cpp  editbooldialog.hpp  editcarddialog.cpp  editcarddialog.hpp  editcarddialog.ui  editcardlistdialog.cpp  editcardlistdialog.hpp  editcardlistdialog.ui  editconstantdialog.ui  editnumericaldialog.cpp  editnumericaldialog.hpp  editpokeractiondialog.cpp  editpokeractiondialog.hpp  validcombobox.cpp  validcombobox.hpp
src/lib/ruleSystem/: CMakeLists.txt  action.cpp  action.hpp  calculator.cpp  calculator.hpp  calculatorfactory.cpp  calculatorfactory.hpp  constant.cpp  constant.hpp  dbwrapper.cpp  dbwrapper.hpp  element.cpp  element.hpp  evaluatable.cpp  evaluatable.hpp  exception.hpp  feature.cpp  feature.hpp  function.cpp  function.hpp  idb.hpp  ielementlistener.hpp  rule_defaults.cpp  rule_defaults.hpp  type.cpp  type.hpp
src/lib/ruleSystem/graphicsView/: CMakeLists.txt  actiongraphicsitem.cpp  actiongraphicsitem.hpp  defaultitemdelegate.cpp  defaultitemdelegate.hpp  dndactioncontroller.cpp  dndactioncontroller.hpp  dndcontroller.hpp  dndfunctioncontroller.cpp  dndfunctioncontroller.hpp  dndifthenelsecontroller.cpp  dndifthenelsecontroller.hpp  dndseparatorcontroller.cpp  dndseparatorcontroller.hpp  elementfactory.cpp  elementfactory.hpp  elementgraphicsitem.cpp  elementgraphicsitem.hpp  elementgraphicsscene.cpp  elementgraphicsscene.hpp  elementitemdelegate.hpp  elementlayout.cpp  elementlayout.hpp  functiongraphicsitem.cpp  functiongraphicsitem.hpp  ifthenelsegraphicsitem.cpp  ifthenelsegraphicsitem.hpp  rulegraphicsitem.cpp  rulegraphicsitem.hpp  separatorgraphicsitem.cpp  separatorgraphicsitem.hpp
src/lib/ruleSystem/prolog/: CMakeLists.txt  elementwriter.cpp  elementwriter.hpp  prologwriter.cpp  prologwriter.hpp
src/lib/ruleSystem/serialization/: CMakeLists.txt
src/lib/ruleSystem/serialization/qt/: CMakeLists.txt  Makefile  elementserializer.cpp  elementserializer.hpp
src/lib/ruleSystem/util/: CMakeLists.txt  constsingleton.hpp  macro.hpp  singleton.hpp  translator.cpp  translator.hpp  typeidentifier.cpp  typeidentifier.hpp
src/test/parserTest/: CMakeLists.txt  parsertest.cpp  parsertest.hpp
src/test/viewTest/: CMakeLists.txt  Makefile  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  ui_mainwindow.h  viewTest
(+45 files in other folders)
